# TaskWatch

./: .env.example  .gitignore  .replit  README.md  SETUP.md  celery_app.py  generate_store_status.py  init_db.py  local_requirements.txt  pyproject.toml  replit.md  run.py  setup_local.py  test_report_generation.py
Redis/: 00-RELEASENOTES  dump.rdb  redis.windows-service.conf  redis.windows.conf
app/: __init__.py
app/api/: reports.py
app/core/: data_loader.py  reporter.py
app/models/: db_models.py
app/utils/: time_helpers.py
attached_assets/: Pasted-Task-Store-Monitoring-Backend-Application-Objective-The-goal-is-to-build-a-complete-backend-applica-1755536664889_1755536664890.txt
static/: style.css
templates/: index.html
